Merge Intervals